# chatbot-llama

./: README.md  docker-compose.yml  install.sh
backend/: .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/api/routers/: chat.py  events.py  feedback.py  general.py  models.py  ocr.py  s3_event.py  upload.py
backend/app/api/services/: suggestion.py
backend/app/engine/: __init__.py  chat_cache.py  generate.py  index.py  vectordb.py
backend/app/engine/loaders/: s3.py
backend/lambda/: lambda_function.py
frontend/: Dockerfile  package.json
frontend/app/: page.tsx
frontend/app/components/: chat-section.tsx  header.tsx
frontend/app/components/ui/chat/: chat-actions.tsx  chat-input.tsx
frontend/app/components/ui/chat/chat-message/: chat-avatar.tsx
